--- a/favorite-markers/index.html
+++ b/favorite-markers/index.html
@@ -3,18 +3,16 @@
     <head>
         <title>Favorite Markers</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/index.css">
     </head>
     <body>
         <header>
             <h1><a href="/">Favorite Markers</a></h1>
             <nav>
                 <ul>
+                    <li class="login-link"></li>
                     <li>
-                        <a href="/login/index.html">Login</a>
-                    </li>
-                    <li>
-                        <a href="/signup/index.html">Sign Up</a>
+                        <a href="/signup.html">Sign Up</a>
                     </li>
                 </ul>
             </nav>
@@ -24,6 +22,6 @@
             <ul class="marker-list"></ul>
             <p class="error-message"></p>
         </main>
-        <script src="app.js"></script>
+        <script src="/index.js"></script>
     </body>
 </html>
