--- a/favorite-markers/signup.html
+++ b/favorite-markers/signup.html
@@ -3,27 +3,25 @@
     <head>
         <title>Favorite Markers</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="signup.css">
     </head>
     <body>
         <header>
             <h1><a href="/">Favorite Markers</a></h1>
             <nav>
                 <ul>
+                    <li class="login-link"></li>
                     <li>
-                        <a href="/login/index.html">Login</a>
-                    </li>
-                    <li>
-                        <a href="/signup/index.html">Sign Up</a>
+                        <a href="/signup.html">Sign Up</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h2>Login</h2>
-            <form></form>
+            <h2>Sign Up</h2>
+            <form class="sign-up">
+            </form>
         </main>
-        <script src="app.js"></script>
+        <script src="/signup.js"></script>
     </body>
 </html>
-
