add signup form w/ event listener

--- a/favorite-markers/signup.html
+++ b/favorite-markers/signup.html
@@ -20,6 +20,8 @@
         <main>
             <h2>Sign Up</h2>
             <form class="sign-up">
+              <input type='text'/>
+              <input type='submit' id="signupSubmit"/>
             </form>
         </main>
         <script src="/signup.js"></script>
